--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "boxicons": "^2.1.4",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
+    "postcss-preset-env": "^9.3.0",
+    "tailwindcss": "^3.3.5",
     "vue": "^3.2.13"
   },
   "devDependencies": {
