--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postcss-cli": "^10.1.0",
     "postcss-preset-env": "^9.3.0",
     "tailwindcss": "^3.3.5",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
